configs/14/cross-node-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: thew-network-test
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-controlplane
  namespace: thew-network-test
spec:
  nodeSelector:
    kubernetes.io/hostname: controlplane
  tolerations:
    - key: node-role.kubernetes.io/control-plane
      operator: Exists
      effect: NoSchedule
  containers:
    - name: test
      image: busybox:1.37.0
      command: ["sleep", "3600"]
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-node01
  namespace: thew-network-test
spec:
  nodeSelector:
    kubernetes.io/hostname: node01
  containers:
    - name: test
      image: busybox:1.37.0
      command: ["sleep", "3600"]
