configs/14/netpol-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: thew-netpol-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: thew-netpol-test
spec:
  replicas: 1
  selector:
    matchLabels:
      role: server
  template:
    metadata:
      labels:
        role: server
    spec:
      containers:
        - name: nginx
          image: nginx:1.29.1-alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: thew-netpol-test
  labels:
    role: client
spec:
  containers:
    - name: client
      image: busybox:1.37.0
      command: ["sleep", "3600"]
